# google-search-console-mcp

./: .gitignore  README.md  gsc.py  main.py  pyproject.toml
