[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsc-mcp-server"
version = "0.1.0"
description = "Google Search Console MCP server for Claude"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.118.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=0.5.0,<1.1.0",
    "mcp[cli]>=1.6.0",
]

[tool.setuptools]
py-modules = ["gsc", "main"]